cmake_minimum_required(VERSION 3.31)
project(SS3 C)

set(CMAKE_C_STANDARD 11)

add_executable(1 PTIT_CNTT1_IT201_Session03_Bai01.c)
add_executable(2 PTIT_CNTT1_IT201_Session03_Bai02.c)
add_executable(3 PTIT_CNTT1_IT201_Session03_Bai03.c)
add_executable(4 PTIT_CNTT1_IT201_Session03_Bai04.c)
add_executable(5 PTIT_CNTT1_IT201_Session03_Bai05.c)
add_executable(6 PTIT_CNTT1_IT201_Session03_Bai06.c)
add_executable(7 PTIT_CNTT1_IT201_Session03_Bai07.c)
